// Copyright 2019 The Knative Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package event_state;

import "google/protobuf/timestamp.proto";

message EventsRecord {
	map<string, google.protobuf.Timestamp> Events = 1;

	enum Type {
		UNKNOWN = 0;
		SENT = 1;
		ACCEPTED = 2;
		RECEIVED = 3;
	}
	Type type = 2;
}

message EventsRecordList {
	repeated EventsRecord items = 1;
}

service EventsRecorder{
	rpc RecordEvents(EventsRecordList) returns (RecordReply) {}
}

message RecordReply {
	uint32 count = 1;
}
